--- a/wildlife.html
+++ b/wildlife.html
@@ -81,7 +81,7 @@
                     </div>
 
                     <div id="tag">
-                     <a href="index.htm" style="color:white">MENU</a>
+                     <a href="index.html" style="color:white">MENU</a>
                      <a href="tourism.html"  style="color:white">TOURISM</a>
                      <a href="culture.html"  style="color:white">CULTURE</a>
                      <a href="temple.html"  style="color:white">TEMPLE'S</a>
