--- a/tourism.html
+++ b/tourism.html
@@ -80,7 +80,7 @@
                     </div>
 
                     <div id="tag">
-                     <a href="index.htm" style="color:orange">MENU</a>
+                     <a href="index.html" style="color:orange">MENU</a>
                      <a href="tourism.html"  style="color:orange">TOURISM</a>
                      <a href="culture.html"  style="color:rgb(255, 255, 255)">CULTURE</a>
                      <a href="temple.html"  style="color:orange">TEMPLE'S</a>
