--- a/temple.html
+++ b/temple.html
@@ -81,7 +81,7 @@
                     </div>
 
                     <div id="tag">
-                     <a href="index.htm" style="color:white(231, 231, 231)">MENU</a>
+                     <a href="index.html" style="color:white(231, 231, 231)">MENU</a>
                      <a href="tourism.html"  style="color:white(0, 0, 0)">TOURISM</a>
                      <a href="culture.html"  style="color:white(8, 0, 0)">CULTURE</a>
                      <a href="temple.html"  style="color:white(0, 0, 0)">TEMPLE'S</a>
